--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4550,6 +4550,9 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
 
+# Qnovo
+CONFIG_QNS_SYSTEM=y
+
 # Colour control
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
