disble usb fast charge

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4563,7 +4563,7 @@ CONFIG_ADRENO_IDLER=y
 CONFIG_QUICK_WAKEUP=y
 
 # USB Fast charging
-CONFIG_FORCE_FAST_CHARGE=y
+# CONFIG_FORCE_FAST_CHARGE is not set
 
 # CPUQUIET
 CONFIG_CPU_QUIET=y
