--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-wayang™v1.3"
+CONFIG_LOCALVERSION="-wayang-MI™v1.3"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -249,7 +249,14 @@ CONFIG_COMPAT_OLD_SIGACTION=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-# CONFIG_MODULES is not set
+CONFIG_MODULES=y
+# CONFIG_MODULE_FORCE_LOAD is not set
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+CONFIG_MODVERSIONS=y
+# CONFIG_MODULE_SRCVERSION_ALL is not set
+# CONFIG_MODULE_SIG is not set
+# CONFIG_MODULE_COMPRESS is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_BLK_DEV_BSG=y
@@ -1264,6 +1271,7 @@ CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_QCOM=y
 CONFIG_SCSI_UFS_QCOM_ICE=y
+CONFIG_SCSI_UFS_TEST=m
 # CONFIG_SCSI_HPTIOP is not set
 # CONFIG_SCSI_DMX3191D is not set
 # CONFIG_SCSI_FUTURE_DOMAIN is not set
@@ -1602,7 +1610,7 @@ CONFIG_ATH_CARDS=y
 # CONFIG_ATH_DEBUG is not set
 # CONFIG_ATH5K_PCI is not set
 # CONFIG_ATH6KL is not set
-CONFIG_WIL6210=y
+CONFIG_WIL6210=m
 CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
 # CONFIG_WIL6210_WRITE_IOCTL is not set
@@ -1645,7 +1653,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
-# CONFIG_INPUT_EVBUG is not set
+CONFIG_INPUT_EVBUG=m
 CONFIG_INPUT_KEYRESET=y
 CONFIG_INPUT_KEYCOMBO=y
 
@@ -1896,7 +1904,7 @@ CONFIG_MSM_SMD_PKT=y
 # CONFIG_XILLYBUS is not set
 CONFIG_MSM_ADSPRPC=y
 # CONFIG_MSM_MDSP_TS is not set
-# CONFIG_MSM_RDBG is not set
+CONFIG_MSM_RDBG=m
 
 #
 # I2C support
@@ -2001,7 +2009,7 @@ CONFIG_SPI_QUP=y
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=y
+CONFIG_SPI_SPIDEV=m
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPMI is not set
 # CONFIG_HSI is not set
@@ -3354,7 +3362,8 @@ CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
-# CONFIG_MMC_TEST is not set
+CONFIG_MMC_TEST=m
+CONFIG_MMC_BLOCK_TEST=m
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -3630,7 +3639,7 @@ CONFIG_ION_MSM=y
 # Qualcomm Atheros Prima WLAN module
 #
 # CONFIG_PRIMA_WLAN is not set
-CONFIG_PRONTO_WLAN=y
+CONFIG_PRONTO_WLAN=m
 # CONFIG_PRIMA_WLAN_BTAMP is not set
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
