--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4563,7 +4563,7 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_QNS_SYSTEM=y
 
 # Colour control
-CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+# CONFIG_FB_MSM_MDSS_KCAL_CTRL is not set
 
 # Adreno idler
 CONFIG_ADRENO_IDLER=y
