--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -208,19 +208,22 @@
 			#size-cells = <1>;
 
 			qcom,iterm-ma = <100>;
-			qcom,float-voltage-mv = <4400>;
-			qcom,resume-delta-mv = <50>;
+			qcom,float-voltage-mv = <4350>;
+			qcom,fastchg-current-ma = <2400>;
+			qcom,resume-delta-mv = <200>;
 			qcom,chg-inhibit-fg;
-			qcom,charge-unknown-battery;
+			qcom,dc-psy-type = "Mains";
+			qcom,dc-psy-ma = <1500>;
 			qcom,rparasitic-uohm = <100000>;
 			qcom,bms-psy-name = "bms";
-			qcom,thermal-mitigation = <1500 700 600 0>;
+			qcom,thermal-mitigation = <1700 1200 1000 600>;
+			qcom,parallel-usb-min-current-ma = <1400>;
+			qcom,parallel-usb-9v-min-current-ma = <900>;
+			qcom,parallel-allowed-lowering-ma = <500>;
+			qcom,autoadjust-vfloat;
 			qcom,pmic-revid = <&pmi8950_revid>;
 			qcom,force-aicl-rerun;
 			qcom,aicl-rerun-period-s = <180>;
-			qcom,autoadjust-vfloat;
-			qcom,fastchg-current-comp = <900>;
-			qcom,float-voltage-comp = <11>;
 
 			qcom,chgr@1000 {
 				reg = <0x1000 0x100>;
@@ -259,7 +262,7 @@
 						<0x2 0x12 0x1>,
 						<0x2 0x12 0x2>,
 						<0x2 0x12 0x3>,
-					<0x2 0x12 0x4>,
+						<0x2 0x12 0x4>,
 						<0x2 0x12 0x5>,
 						<0x2 0x12 0x6>,
 						<0x2 0x12 0x7>;
@@ -268,7 +271,7 @@
 							"batt-warm",
 							"batt-cold",
 							"batt-cool",
-						"batt-ov",
+							"batt-ov",
 							"batt-low",
 							"batt-missing",
 							"batt-term-missing";
@@ -282,7 +285,7 @@
 						<0x2 0x13 0x5>;
 
 				interrupt-names =	"usbin-uv",
-						"usbin-ov",
+							"usbin-ov",
 							"usbin-src-det",
 							"aicl-done";
 			};
@@ -291,6 +294,7 @@
 				reg = <0x1400 0x100>;
 				interrupts =	<0x2 0x14 0x0>,
 						<0x2 0x14 0x1>;
+
 				interrupt-names =	"dcin-uv",
 							"dcin-ov";
 			};
@@ -300,7 +304,7 @@
 				interrupts =	<0x2 0x16 0x0>,
 						<0x2 0x16 0x1>,
 						<0x2 0x16 0x2>,
-					<0x2 0x16 0x3>,
+						<0x2 0x16 0x3>,
 						<0x2 0x16 0x4>,
 						<0x2 0x16 0x5>;
 
@@ -322,21 +326,20 @@
 			compatible = "qcom,qpnp-fg";
 			#address-cells = <1>;
 			#size-cells = <1>;
-			qcom,resume-soc = <99>;
+			qcom,resume-soc = <95>;
 			status = "okay";
 			qcom,bcl-lm-threshold-ma = <127>;
 			qcom,bcl-mh-threshold-ma = <405>;
-			qcom,fg-iterm-ma = <150>;
+			qcom,fg-iterm-ma = <125>;
 			qcom,fg-chg-iterm-ma = <100>;
-			qcom,pmic-revid = <&pmi8950_revid>;
-			qcom,fg-cutoff-voltage-mv = <3400>;
 			qcom,cycle-counter-en;
 			qcom,capacity-learning-on;
-			qcom,fg-cc-cv-threshold-mv = <4380>;
-			qcom,fg-vbat-estimate-diff-mv = <200>;
+			qcom,fg-cc-cv-threshold-mv = <4340>;
+			qcom,pmic-revid = <&pmi8950_revid>;
+			qcom,capacity-learning-feedback;
 
 			qcom,fg-soc@4000 {
-			status = "okay";
+				status = "okay";
 				reg = <0x4000 0x100>;
 				interrupts =	<0x2 0x40 0x0>,
 						<0x2 0x40 0x1>,
