re enable voltage cutoff
Signed-off-by: viky dwi santoso <vickky@programmer.net>
(cherry picked from commit 820eacaabe98a72db0786415683bc8806a07e0f3)

--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -338,6 +338,7 @@
 			qcom,fg-cc-cv-threshold-mv = <4340>;
 			qcom,pmic-revid = <&pmi8950_revid>;
 			qcom,capacity-learning-feedback;
+			qcom,fg-cutoff-voltage-mv = <3400>;
 
 			qcom,fg-soc@4000 {
 				status = "okay";
