enable sound control
(cherry picked from commit 8aa26131fe7fd5fbd85a3090ec256c00979255b1)

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4552,6 +4552,8 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
 
+
+# wayang
 # Qnovo
 CONFIG_QNS_SYSTEM=y
 
@@ -4576,3 +4578,6 @@ CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
 # CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
 CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
 CONFIG_CPU_QUIET_MSM=y
+
+# SOUND CONTROL
+CONFIG_SOUND_CONTROL=y
