--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -4561,6 +4561,8 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
 
+
+# wayang
 # Qnovo
 CONFIG_QNS_SYSTEM=y
 
@@ -4585,3 +4587,6 @@ CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
 # CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
 CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
 CONFIG_CPU_QUIET_MSM=y
+
+# SOUND CONTROL
+CONFIG_SOUND_CONTROL=y
