--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-wayang™v1.3"
+CONFIG_LOCALVERSION="-wayang™v1.3.5"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -4571,8 +4571,8 @@ CONFIG_QUICK_WAKEUP=y
 
 # CPUQUIET
 CONFIG_CPU_QUIET=y
-# CONFIG_CPU_QUIET_GOVERNOR_USERSPACE is not set
-# CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE is not set
+CONFIG_CPU_QUIET_GOVERNOR_USERSPACE=y
+CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE=y
 CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
 # CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
