--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-wayang™v1.3.5"
+CONFIG_LOCALVERSION="-wayang™v1.4"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -290,12 +290,25 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIOPS=y
+# CONFIG_IOSCHED_SIO is not set
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_SIOPLUS=y
+# CONFIG_IOSCHED_VR is not set
+# CONFIG_IOSCHED_FIFO is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_IOSCHED_SIOPLUS=y
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
 # CONFIG_DEFAULT_SIOPLUS is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_FIFO is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
