--- a/arch/arm64/configs/bagong_defconfig
+++ b/arch/arm64/configs/bagong_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Wayang_Bagong-Mi™v1.4"
+CONFIG_LOCALVERSION="-Wayang_Petruk-Mi™v1.4"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -548,7 +548,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-# CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE is not set
+CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_CPU_BOOST is not set
 
@@ -3784,7 +3784,7 @@ CONFIG_MSM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_PERFORMANCE=y
-# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
+CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 # CONFIG_MSM_POWER is not set
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
@@ -4594,14 +4594,14 @@ CONFIG_QUICK_WAKEUP=y
 # CONFIG_FORCE_FAST_CHARGE is not set
 
 # CPUQUIET
-CONFIG_CPU_QUIET=y
+# CONFIG_CPU_QUIET is not set
+# CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE is not set
 # CONFIG_CPU_QUIET_GOVERNOR_USERSPACE is not set
 # CONFIG_CPU_QUIET_GOVERNOR_RUNNABLE is not set
-CONFIG_CPU_QUIET_GOVERNOR_RQBALANCE=y
 # CONFIG_CPU_QUIET_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_QUIET_DEFAULT_GOV_RUNNABLE is not set
-CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE=y
-CONFIG_CPU_QUIET_MSM=y
+# CONFIG_CPU_QUIET_DEFAULT_GOV_RQBALANCE is not set
+# CONFIG_CPU_QUIET_MSM is not set
 
 # SOUND CONTROL
 CONFIG_SOUND_CONTROL=y
