--- a/arch/arm64/configs/bagong_defconfig
+++ b/arch/arm64/configs/bagong_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Wayang_Petruk-Mi™v1.4"
+CONFIG_LOCALVERSION="-Wayang_Bagong-Mi™v1.4"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -1224,6 +1224,7 @@ CONFIG_MSM_ULTRASOUND=y
 # CONFIG_GENWQE is not set
 # CONFIG_ECHO is not set
 # CONFIG_CXL_BASE is not set
+CONFIG_HQ_SYSFS_SUPPORT=y
 
 #
 # SCSI device support
@@ -2627,6 +2628,7 @@ CONFIG_RADIO_SILABS=y
 # Media ancillary drivers (tuners, sensors, i2c, frontends)
 #
 CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
+CONFIG_MEDIA_ATTACH=y
 CONFIG_VIDEO_IR_I2C=y
 
 #
@@ -2802,7 +2804,7 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS is not set
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+# CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 # CONFIG_ADF is not set
