--- a/arch/arm64/configs/petruk_defconfig
+++ b/arch/arm64/configs/petruk_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Wayang_Bagong-Mi™v1.4"
+CONFIG_LOCALVERSION="-Wayang_Petruk-Mi™v1.4"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
