- adapted from https://github.com/vicatz/wayang_kernel_N/commit/b30046c1febb2dbd316dff68bba6329e40dac03d
Add a devicetree "disable-wake-on-touch" property support
to disable GPU wake up on touch input events. This will
help save power in case of unintended taps and swipes,
for example, when the screen is wet.

Signed-off-by: viky dwi santoso <vickky@programmer.net>

--- a/arch/arm/boot/dts/qcom/msm8953-gpu.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953-gpu.dtsi
@@ -121,6 +121,9 @@
 		/* Quirks */
 		qcom,gpu-quirk-two-pass-use-wfi;
 		qcom,gpu-quirk-dp2clockgating-disable;
+		
+		/* Disable wake on touch */
+		qcom,disable-wake-on-touch;
 
 		/* Trace bus */
 		coresight-id = <67>;
