enable boeffla blocker

--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -48,6 +48,8 @@ CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_ZEN_INTERACTIVE=y
 
+# Boeffla Blocker
+CONFIG_BOEFFLA_WL_BLOCKER=y
 
 #
 # General setup
